# CLM

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  premake5.lua
data/helen_95/: detector.data  patch.data  shape.data
data/helen_default/: detector.data  patch.data  shape.data
data/muct_default/: detector.data  patch.data  shape.data  shape15.data
data/yukiti_data/: bill_yukiti.ptdata  dst_yukiti_face.ptdata
src/: Makefile  main.cpp  train.cpp  yukiti.cpp  yukiti2.cpp
src/appearance/: appearance.cpp  appearance.h
src/clm/: clm.cpp  clm.h  detector.cpp  detector.h  patch.cpp  patch.h  shape.cpp  shape.h
src/io/: face_data.cpp  face_data.h  fps.cpp  fps.h
